# job-search

./: .gitignore  Dockerfile  config.ini  demo copy.py  demo.py  demodear copy.py  demodear.py  gui.py  gui_LLM.py  gui_new.py  main.py  procedure.md  pyproject.toml  test.txt  text.html  text.pkl
GUI/: modules.py
Resume/: Mark Zimmerman Resume_01.2023_CS_refined.docx  Mark Zimmerman Resume_04.2020.docx  NewResume.doc  NewResume2.doc  Resume.doc  tutor resume.doc
Resumes/: llm.py  pdf.py  resume.pkl  resume.py
Resumes/main/: main.tex  resume.pkl
Search/: oldProfiles.pkl  profile.py  profiles copy 2.pkl  profiles copy 3.pkl  profiles.pkl  resume.py  scratch.txt  search.py  searches copy.json  searches.json  transforms.py  utility.py
docs/source/: conf.py  index.rst
jobsearch/: __main__.py
jobsearch/backend/: backend.py  userprofile.py
jobsearch/gui/: gui.py  menu.py  module.py  modules.py  userprofile.py
jobsearch/resumes/: llm.py  pdf.py  resume.py
jobsearch/search/: profile.py  search.py  utility.py
tests/: __init__.py  test_userprofile.py
